Fixing little bugs and problems (IDEA analysis)